--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,22 +18,22 @@ $padding-mobile--compact: 20px;
 @import url("//hello.myfonts.net/count/36be38");
 
   
-@font-face {font-family: 'Meltow-Brush';src: url('webfonts/36BE38_0_0.eot');src: url('webfonts/36BE38_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/36BE38_0_0.woff2') format('woff2'),url('webfonts/36BE38_0_0.woff') format('woff'),url('webfonts/36BE38_0_0.ttf') format('truetype');}
+@font-face {font-family: 'Meltow-Brush';src: url('../../webfonts/36BE38_0_0.eot');src: url('../webfonts/36BE38_0_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/36BE38_0_0.woff2') format('woff2'),url('../webfonts/36BE38_0_0.woff') format('woff'),url('../webfonts/36BE38_0_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'Meltow-Marker';src: url('webfonts/36BE38_1_0.eot');src: url('webfonts/36BE38_1_0.eot?#iefix') format('embedded-opentype'),url('webfonts/36BE38_1_0.woff2') format('woff2'),url('webfonts/36BE38_1_0.woff') format('woff'),url('webfonts/36BE38_1_0.ttf') format('truetype');}
+@font-face {font-family: 'Meltow-Marker';src: url('../webfonts/36BE38_1_0.eot');src: url('../webfonts/36BE38_1_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/36BE38_1_0.woff2') format('woff2'),url('../webfonts/36BE38_1_0.woff') format('woff'),url('../webfonts/36BE38_1_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'MeltowSan200-Regular';src: url('webfonts/36BE38_2_0.eot');src: url('webfonts/36BE38_2_0.eot?#iefix') format('embedded-opentype'),url('webfonts/36BE38_2_0.woff2') format('woff2'),url('webfonts/36BE38_2_0.woff') format('woff'),url('webfonts/36BE38_2_0.ttf') format('truetype');}
+@font-face {font-family: 'MeltowSan200-Regular';src: url('../webfonts/36BE38_2_0.eot');src: url('../webfonts/36BE38_2_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/36BE38_2_0.woff2') format('woff2'),url('../webfonts/36BE38_2_0.woff') format('woff'),url('../webfonts/36BE38_2_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'MeltowSan100-Italic';src: url('webfonts/36BE38_3_0.eot');src: url('webfonts/36BE38_3_0.eot?#iefix') format('embedded-opentype'),url('webfonts/36BE38_3_0.woff2') format('woff2'),url('webfonts/36BE38_3_0.woff') format('woff'),url('webfonts/36BE38_3_0.ttf') format('truetype');}
+@font-face {font-family: 'MeltowSan100-Italic';src: url('../webfonts/36BE38_3_0.eot');src: url('../webfonts/36BE38_3_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/36BE38_3_0.woff2') format('woff2'),url('../webfonts/36BE38_3_0.woff') format('woff'),url('../webfonts/36BE38_3_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'MeltowSan100-Regular';src: url('webfonts/36BE38_4_0.eot');src: url('webfonts/36BE38_4_0.eot?#iefix') format('embedded-opentype'),url('webfonts/36BE38_4_0.woff2') format('woff2'),url('webfonts/36BE38_4_0.woff') format('woff'),url('webfonts/36BE38_4_0.ttf') format('truetype');}
+@font-face {font-family: 'MeltowSan100-Regular';src: url('../webfonts/36BE38_4_0.eot');src: url('../webfonts/36BE38_4_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/36BE38_4_0.woff2') format('woff2'),url('../webfonts/36BE38_4_0.woff') format('woff'),url('../webfonts/36BE38_4_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'MeltowSan200-Italic';src: url('webfonts/36BE38_5_0.eot');src: url('webfonts/36BE38_5_0.eot?#iefix') format('embedded-opentype'),url('webfonts/36BE38_5_0.woff2') format('woff2'),url('webfonts/36BE38_5_0.woff') format('woff'),url('webfonts/36BE38_5_0.ttf') format('truetype');}
+@font-face {font-family: 'MeltowSan200-Italic';src: url('../webfonts/36BE38_5_0.eot');src: url('../webfonts/36BE38_5_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/36BE38_5_0.woff2') format('woff2'),url('../webfonts/36BE38_5_0.woff') format('woff'),url('../webfonts/36BE38_5_0.ttf') format('truetype');}
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,300i');
 
