--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,7 +18,7 @@ $padding-mobile--compact: 20px;
 @import url("//hello.myfonts.net/count/36be38");
 
   
-@font-face {font-family: 'Meltow-Brush';src: url('../../webfonts/36BE38_0_0.eot');src: url('../webfonts/36BE38_0_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/36BE38_0_0.woff2') format('woff2'),url('../webfonts/36BE38_0_0.woff') format('woff'),url('../webfonts/36BE38_0_0.ttf') format('truetype');}
+@font-face {font-family: 'Meltow-Brush';src: url('../webfonts/36BE38_0_0.eot');src: url('../webfonts/36BE38_0_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/36BE38_0_0.woff2') format('woff2'),url('../webfonts/36BE38_0_0.woff') format('woff'),url('../webfonts/36BE38_0_0.ttf') format('truetype');}
  
   
 @font-face {font-family: 'Meltow-Marker';src: url('../webfonts/36BE38_1_0.eot');src: url('../webfonts/36BE38_1_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/36BE38_1_0.woff2') format('woff2'),url('../webfonts/36BE38_1_0.woff') format('woff'),url('../webfonts/36BE38_1_0.ttf') format('truetype');}
