--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,4 @@
+/* Test */
 /* @import must be at top of file, otherwise CSS will not work */
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,300i');
 @import url("//hello.myfonts.net/count/36be38");
