--- a/scss/main.scss
+++ b/scss/main.scss
@@ -929,6 +929,7 @@ nav {
     #guest-count {
     	text-align: center;
     	border-bottom: 0px;
+    	margin-bottom: 10px;
     	max-width: 36px;
     	font-size: 18px;
     	font-family: 'MeltowSan200-Regular';
@@ -974,10 +975,10 @@ nav {
 
 #rsvp-form {
 	position: absolute;
-    top: 30px;
+    top: 0px;
     left: 30px;
-    padding: 0px;
-    bottom: 30px;
+    padding: 30px 0;
+    bottom: 0px;
     right: 30px;
     overflow-x: hidden;
 	overflow-y: scroll; /* has to be scroll, not auto */
@@ -987,14 +988,93 @@ nav {
     	font-size: 40px;
     }
     h4 {
-    	margin: 10px 0 10px 20px;
+    	margin: 10px 0;
     	font-family: 'MeltowSan200-Regular';
-    	@media (min-width: $medium) {
-    		margin: 10px 0 10px 30px;
+    }
+    p {
+    	margin-bottom: 30px;
+    	font-family: 'MeltowSan200-Regular';
+    }
+    #rsvp-result {
+    	padding: 0  20px;
+    	p {
+    		font-size: 13px;
+    		margin: 30px 0 0 0;
+    		font-family: 'Poppins', sans-serif;
+   			@media (min-width: $medium) {
+   				font-size: 15px;
+   			}
     	}
-
     }
 }
+
+#guest-count-container {
+	padding-left: 30px;
+	h4 {
+		margin: 0 0 10px 0;
+	}
+}
+
+.radio{
+  display: block;
+  cursor: pointer; 
+  user-select:none;
+  text-align: left;
+  margin: 0 0 20px 0;
+  &+.radio{
+    margin-top: 20px;
+  }
+  input{
+    display: none;
+    &+span{
+      display: inline-block; 
+      position: relative;
+      padding-left: 30px;
+      opacity: 0.5;
+      line-height: 1;
+      &:before{
+        content: '';
+        display: block; 
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        border-radius: 50%;
+        margin-right: 10px;
+        width: 16px;
+        height: 16px;
+        border: 1px solid $ink;
+        background-color: transparent;
+        opacity: 0.5;
+      }
+      &:after{
+      	opacity: 0.5;
+        content: '';
+        display: block; 
+        width: 10px;
+        height: 10px;
+        background: $ink;
+        position: absolute;
+        border-radius: 50%;
+        top: 3px;
+        left: 3px;
+        opacity: 0;
+        transform: scale(0,0); 
+        transition: all .2s cubic-bezier(0.64, 0.57, 0.67, 1.53);
+      }
+    }
+    &:checked {
+    	opacity: 1;
+    }
+    &:checked+span {
+    	opacity: 1;
+    }
+    &:checked+span:after{
+      opacity: 1;
+      transform: scale(1,1);
+    }
+  }
+}
+/* END CHECKBOX STYLE */
 
 #photos {
 	.wrap {
