--- a/scss/main.scss
+++ b/scss/main.scss
@@ -976,10 +976,10 @@ nav {
 #rsvp-form {
 	position: absolute;
     top: 0px;
-    left: 30px;
-    padding: 30px 0;
+    left: 0px;
+    padding: 30px;
     bottom: 0px;
-    right: 30px;
+    right: 0px;
     overflow-x: hidden;
 	overflow-y: scroll; /* has to be scroll, not auto */
 	-webkit-overflow-scrolling: touch;
