new photo, RSVP success message update

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -897,6 +897,9 @@ nav {
 		-webkit-overflow-scrolling: touch;
 	}
     .form-group {
+    	max-width: 620px;
+    	margin: 0 auto;
+    	width: 100%;
     	input {
     		width: 100%;
     		margin-bottom: 30px;
@@ -1004,6 +1007,9 @@ nav {
    			@media (min-width: $medium) {
    				font-size: 15px;
    			}
+    	}
+    	@media (min-width: $medium) {
+    		padding: 0 30px;
     	}
     }
 }
