qty highlight fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -907,6 +907,10 @@ nav {
     }
     .js-qty--plus, .js-qty--minus {
     	cursor: pointer;
+	    -webkit-user-select: none; /* webkit (safari, chrome) browsers */
+	    -moz-user-select: none; /* mozilla browsers */
+	    -khtml-user-select: none; /* webkit (konqueror) browsers */
+	    -ms-user-select: none; /* IE10+ */
     	transition: all 0.2s ease-in-out;
     	&:hover {
     		color: $gold;
